--- a/dev_training/Components/src/app/radio/radio.component.scss
+++ b/dev_training/Components/src/app/radio/radio.component.scss
@@ -4,36 +4,52 @@
   align-items: center;
   padding-left: 0;
   margin-right: 8px;
+
+  .form-radio-label {
+    display: block;
+    align-items: center;
+    position: relative;
+    padding-left: 28px;
+    padding-right: 10px;
+    margin-bottom: 28px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    color: #333333;
+  
+    .form-radio-input {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 20px;
+      width: 20px;
+      // border-radius: 50%;
+      border: 1px solid #ffcc33;
+      background-color: #ffffff;
+      margin-right: 80px;
+    
+      &::after {
+        content: "";
+        position: absolute;
+        display: none;
+        width: 12px;
+        height: 12px;
+        border-radius: 50%;
+        background: #6244bb;
+        transform: translate(4px, 4px); 
+      }
+    }
+  }
 }
 
-.form-radio-label {
-  display: block;
-  align-items: center;
-  position: relative;
-  padding-left: 28px;
-  padding-right: 10px;
-  margin-bottom: 28px;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 24px;
-  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-  color: #333333;
-}
+
 
 .form-radio-input input {
   position: absolute;
   opacity: 0;
 }
 
-.form-radio-input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-  border: 1px solid #666666;
-  background-color: #ffffff;
-  margin-right: 80px;
-}
+
+
